# fluxo

./: .gitignore  .gitlab-ci.yml  .gitlab-ci_only-pcm.yml  CMakeLists.txt  CONTRIBUTORS.md  INSTALL.md  README.md  REFERENCES.md  diff.file
doc/: GITcheatsheet.md
doc/ford/: README.md  ford_projectfile.md
doc/mortars/: MPI_mortar_datastructure.odg
ini/mhd/: CartBoxPeriodic2D_004_004_mesh.h5  CartBoxPeriodic2D_008_008_mesh.h5  CartBoxPeriodic2D_016_016_mesh.h5  preproc_CartBoxPeriodic.ini  preproc_CartBoxPeriodicDeform.ini
scaling_testcase/: CARTBOX_PERIODIC_02_02_02_00008_mesh.h5  CARTBOX_PERIODIC_02_02_04_00016_mesh.h5  CARTBOX_PERIODIC_02_04_04_00032_mesh.h5  CARTBOX_PERIODIC_04_04_03_00001x48_mesh.h5  CARTBOX_PERIODIC_04_04_04_00064_mesh.h5  CARTBOX_PERIODIC_04_04_06_00002x48_mesh.h5  CARTBOX_PERIODIC_04_04_08_00128_mesh.h5  CARTBOX_PERIODIC_04_08_06_00004x48_mesh.h5  CARTBOX_PERIODIC_04_08_08_00256_mesh.h5  CARTBOX_PERIODIC_08_08_06_00008x48_mesh.h5  CARTBOX_PERIODIC_08_08_08_00512_mesh.h5  CARTBOX_PERIODIC_08_08_12_00016x48_mesh.h5  CARTBOX_PERIODIC_08_08_16_01024_mesh.h5  CARTBOX_PERIODIC_08_16_12_00032x48_mesh.h5  CARTBOX_PERIODIC_08_16_16_02048_mesh.h5  CARTBOX_PERIODIC_16_16_12_00064x48_mesh.h5  CARTBOX_PERIODIC_16_16_16_04096_mesh.h5  README.md  build_meshes.py  parameter_mhd.ini  parameter_navierstokes.ini  parameter_navierstokes_LF_008_N4.ini  preproc_hopr.ini
src/: defines.h  fluxo.f90  fluxo_post.f90
src/amr/: amr.f90  amr_f.h  amr_vars.f90  connectivity.c  connectivity.h  interpolation.f90wip  optimisation.c  optimisation.h  p4est.f90  p4est_wrap.c  p4est_wrap.h  p4fluxo.c  p4fluxo.h  ready.fc  save.c  tracking.f90
src/analyze/: analyze.f90  analyze_vars.f90
src/ct/: ct.f90  ct_vars.f90
src/dg/: dg.f90  dg_vars.f90  fillflux.f90  surfint.f90  volint.f90
src/eigenvalues/: eigenvalues.f90  eigenvalues_vars.f90  linalg.f90
src/globals/: commandlinearguments.f90  globals.f90  preprocessing.f90  vector.f90
src/indicators/: indicator_PerssonPeraire.f90  indicator_loehner.f90  indicators.f90  indicators_var.f90
src/interpolation/: applyjacobian.f90  basis.f90  changeBasis.f90  interpolation.f90  interpolation_vars.f90  prolongtoface.f90
src/io_hdf5/: hdf5_input.f90  hdf5_output.f90  io_hdf5.f90
src/mesh/: debugmesh.f90  mappings.f90  mesh.f90  mesh_readin.f90  mesh_vars.f90  metrics.f90  prepare_mesh.f90
src/mortar/: fillmortar.f90  mortar.f90  mortar_metrics.f90  mortar_vars.f90
src/mpi/: mpi.f90  mpi_vars.f90
src/output/: output.f90  output_vars.f90  output_vtk.f90
src/positivitypreservation/: positivitypreservation.f90  positivitypreservation_vars.f90
src/readintools/: options.f90  readintools.f90  stringtools.f90
src/restart/: restart.f90  restart_vars.f90
src/shockcapturing/: idp.f90  idp_vars.f90  nfvse.f90  nfvse_mpi.f90  nfvse_vars.f90  shockcapturing.f90  shockcapturing.f90y  shockcapturing_vars.f90
src/timedisc/: timedisc.f90  timedisc_vars.f90
tests/: NEW_build_tests.py  OLD_build_tests.py  README.md  build_tests.py  build_tests_MHD.py  build_tests_std_vs_split.py  build_tests_std_vs_split_MHD.py  helpers.py  job_check.py  job_def.py
tests/convergence/: README.md  jobscript_MANSOL2D.sh  parameter_convergence_MHD_ManSol.ini  parameter_convergence_MHD_multicomp_ManSol.ini  parameter_convergence_MHD_twocomp_variablegamma_ManSol.ini  parameter_convergence_NS_DENSITYWAVE2D.ini  parameter_convergence_NS_MANSOL2D.ini  parameter_convergence_NS_VORTEX2D.ini  parameter_convergence_linadv.ini  parameter_convergence_linadvdiff.ini  runtest.py
tests/freestream/: CartBoxMortarPeriodic_Ngeo_1_Level_01_mesh.h5  CartBoxPeriodic_02_02_02_mesh.h5  ConformBoxCurved_Ngeo3_02_02_02_mesh.h5  ConformBoxHeavilyWarped_Ngeo4_03_03_03_mesh.h5  DeformedBoxMortarPeriodic_Ngeo_1_Level_01_mesh.h5  DeformedBoxMortarPeriodic_Ngeo_2_Level_01_mesh.h5  DeformedBoxMortar_Ngeo_2_Level_01_mesh.h5  README.md  build_conform_meshes.py  cart_period_1level_1_1_2_elem_mesh.h5  cart_period_1level_1_1_4_elem_mesh.h5  cart_period_1level_1_2_1_elem_mesh.h5  cart_period_1level_1_2_2_elem_mesh.h5  cart_period_1level_1_4_1_elem_mesh.h5  cart_period_1level_1_4_4_elem_mesh.h5  cart_period_1level_2_1_2_elem_mesh.h5  cart_period_1level_2_1_4_elem_mesh.h5  cart_period_1level_2_2_1_elem_mesh.h5  cart_period_1level_2_2_2_elem_mesh.h5  cart_period_1level_2_4_1_elem_mesh.h5  cart_period_1level_2_4_4_elem_mesh.h5  cart_period_2level_1_1_4_elem_mesh.h5  cart_period_2level_1_4_1_elem_mesh.h5  cart_period_2level_1_4_4_elem_mesh.h5  cart_period_2level_2_1_4_elem_mesh.h5  cart_period_2level_2_4_1_elem_mesh.h5  cart_period_2level_2_4_4_elem_mesh.h5  cartbox_periodic_1levelmortar_1_elem_mesh.h5  cartbox_periodic_1levelmortar_2D_2_elem_mesh.h5  cartbox_periodic_1levelmortar_2_elem_mesh.h5  cartbox_periodic_2levelmortar_1_elem_mesh.h5  cartbox_periodic_2levelmortar_2D_2_elem_mesh.h5  cartbox_periodic_2levelmortar_2Dxz_2_elem_mesh.h5  cartbox_periodic_2levelmortar_2_elem_mesh.h5  cartbox_periodic_2levelmortar_2_elem_yzrefined_mesh.h5  deform2d_Ngeo1_period_1level_1_4_1_elem_mesh.h5  deform2d_Ngeo1_period_1level_1_4_4_elem_mesh.h5  deform2d_Ngeo2_period_1level_1_2_2_elem_mesh.h5  deform2d_Ngeo2_period_1level_1_4_1_elem_mesh.h5  deform3d_Ngeo1_period_1level_1_4_4_elem_mesh.h5  (+47 more)
tests/meshes/: CartBoxMortarPeriodic_Ngeo1_2to1_mesh.h5  CartBoxMortarPeriodic_Ngeo1_4to1_mesh.h5  ConformBoxHeavilyWarped_Ngeo3__03_03_03_mesh.h5  ConformBoxUnstruct2_Ngeo2_mesh.h5  ConformBoxUnstructPeriodicHeavilyWarped_Ngeo2_mesh.h5  DeformedBoxMortarPeriodic__Ngeo_1_Level_01_mesh.h5  DeformedBoxMortarPeriodic__Ngeo_1_Level_02_mesh.h5  DeformedBoxMortarPeriodic__Ngeo_2_Level_01_mesh.h5  DeformedBoxMortarPeriodic__Ngeo_2_Level_02_mesh.h5  README.md  build_conform_meshes.py  build_mortar_meshes.py  parameter_CartBoxMortarPeriodic.ini  parameter_CartBoxMortarPeriodic_2to1.ini  parameter_CartBoxMortarPeriodic_4to1.ini  parameter_CartBoxPeriodic.ini  parameter_ConformBoxCurved.ini  parameter_ConformBoxHeavilyWarped.ini  parameter_ConformBoxTrilinear.ini  parameter_ConformBoxUnstruct2.ini  parameter_hopr.ini  (+5 more)
(+242 files in other folders)
